                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-10-2005 fixed: erroneous error messages being reported in log
                     "ERROR CUtil::GetMatchingShare... no matching bookmark found for [/]"
                     "ERROR CVirtualDirectory::GetDirectory() matches no valid bookmark, getting root bookmark list instead"
 - 23-10-2005 fixed: memory leaks and startup lag in the aac codec - thanks to arnie pie!
 - 22-10-2005 removed: sidplayer. obsolete due to the paplayer sid codec.
 - 22-10-2005 fixed: playlists button found in my music files window
 - 22-10-2005 fixed: aac codec failed for he-aac.
 - 22-10-2005 fixed: fatx limiter is now applied to directory names as well - thanks to soepy.
 - 22-10-2005 added: alac (apple lossless audio codec) support to paplayer. shares dll with the aac codec.
 - 19-10-2005 added: experimental support for multiple paths in my music bookmarks.
                     only hard drive, samba, and xbms paths are allowed, any other are removed when the config is read.
                     DO NOT USE COMMA SEPERATED PATHS.  the config MUST be as follows since comma is a valid smb and xbms character:
                     <bookmark>
                       <name>Music</name>
                       <path>E:\Music</path>
                       <path>smb://workgroup;user:pass@someserver/music</path>
                       <path>xbms://anotherserver:1400/music</path>
                     </bookmark>
 - 18-10-2005 added: Support for D3D Visibility testing from plugins.
 - 17-10-2005 changed/fixed: xbe regions will only be used in my programs (not with xbmc.runxbe nor in my files). avoids a potential freeze on xbe launch.